# agent-jace

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.dev.yaml  compose.yaml  jaceagent.py  main.py  pyproject.toml  scryfall.py  tools.py
deploy/: nginx.Dockerfile  nginx.conf
frontend/: .env.example  .env.production  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  types.ts  useChat.ts
frontend/src/api/: client.ts  mockBackend.ts
frontend/src/components/: CardGallery.tsx  CardTile.tsx  Composer.tsx  ManaCost.tsx  Markdown.tsx  Message.tsx  RecommendationList.tsx  ToolCallBadge.tsx  useCardPreview.ts
prompts/: jace-agent.yaml
service/: cards.py  chat_service.py  jaceagent.py  models.py  scryfall.py  tools.py
tests/: test_prompt.py
