[project]
name = "mtg-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openai>=2.43.0",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
]

[project.scripts]
jace = "main:main"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["main.py", "jaceagent.py", "scryfall.py", "tools.py", "prompts"]

[tool.pytest.ini_options]
pythonpath = ["."]
