[project]
name = "mtg-agent"
version = "0.1.0"
description = "Jace — a CLI AI assistant for Magic: The Gathering Commander deckbuilding, grounded in real Scryfall cards."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.137.2",
    "openai>=2.43.0",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
]

[project.scripts]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["main.py", "service", "prompts"]

[tool.pytest.ini_options]
pythonpath = ["."]
